--- a/prj/02_pcie_ddr4x4/Makefile
+++ b/prj/02_pcie_ddr4x4/Makefile
@@ -1,3 +1,7 @@
 
 run:
+	#sed -i '/^create_project/s/.*/create_project $$\{_xil_proj_name_\} . -part xcvu13p-fhgb2104-2-i /' project.tcl
+	rm project.tcl
+	git co project.tcl
+	sed -i '/^create_project/s/$$/ -force/' project.tcl
 	vivado -mode batch -source compile.tcl
