支持下载bin文件

--- a/download/Makefile
+++ b/download/Makefile
@@ -1,6 +1,10 @@
 
 bitname=/home/dbg/work/pciex16_ddr4_x4.bit
+binname=''
 
 run:
 	vivado -mode batch -source ./downloadbit.tcl -tclargs $(bitname)
+
+bin:
+	vivado -mode batch -source ./downloadbin.tcl -tclargs $(binname)
 
