--- a/download/Makefile
+++ b/download/Makefile
@@ -1,9 +1,10 @@
 
 bitname=/home/dbg/work/pciex16_ddr4_x4.bit
+ltxname=''
 binname=''
 
 run:
-	vivado -mode batch -source ./downloadbit.tcl -tclargs $(bitname)
+	vivado -mode batch -source ./downloadbit.tcl -tclargs $(bitname)  $(ltxname)
 
 bin:
 	vivado -mode batch -source ./downloadbin.tcl -tclargs $(binname)
